@@ -20,6 +20,7 @@ $lang = [
     'chat.php' => 'IRC',
     'contactstaff.php' => 'Contact Staff',
     'details.php' => 'Torrent Details',
+    'donate.php' => 'Donation',
     'edit.php' => 'Edit Torrent',
     'faq.php' => 'FAQ',
     'fastdelete.php' => 'Delete Torrent',
@@ -41,6 +42,7 @@ $lang = [
     'requests.php' => 'View Requests',
     'rsstfreak.php' => 'Torrent Freak News',
     'rules.php' => 'Site Rules',
+    'setclass.php' => 'Set Temp Class',
     'staff.php' => 'Site Staff',
     'staffbox.php' => 'Staff Mailbox',
     'staffpanel.php' => 'Staff Panel',
@@ -50,6 +52,7 @@ $lang = [
     'topten.php' => 'Top 10',
     'view_mailbox' => 'View Mailboxes',
     'upload.php' => 'Upload Torrent',
+    'uploadapp.php' => 'Uploaders App',
     'usercp.php' => 'User Control Panel',
     'userdetails.php' => 'User Details',
     'users.php' => 'Search Users',
@@ -57,6 +60,7 @@ $lang = [
     'wiki.php' => 'Wiki',
     // action names
     'acpmanage' => 'Manage Accounts',
+    'add' => 'Add',
     'add_new_offer' => 'Add Offer',
     'add_new_request' => 'Add Request',
     'adduser' => 'Create User',
