@@ -1,3 +1,6 @@
+20 Oct, 2018
+update: missing tags from breadcrumbs
+
 18 Oct, 2038
 update: FluentPDO, Flysystem, Sass, PostCSS, autoprefixer, node-sas
 update: version number package.json
